# djangowasm

./: index.html  pyproject.toml
djangosample/: README.md
djangosample/djangosample/: settings.py  urls.py
djangowasm/: serve.py
djangowasm/static/: asynctest.html  asyncworker.js  index.html  postgrestest.html  servedjango.html  syncworker.js  worker.js  workertest.html
djangowasm/templates/: servedjango.html
